--- a/11-Tree-based-models.qmd
+++ b/11-Tree-based-models.qmd
@@ -474,7 +474,7 @@ Here, `formula` specifies the relationship between the target variable (`income`
 
 To evaluate which predictors contribute most to model accuracy, we can visualize variable importance:
 
-```{r}
+```{r out.width = "70%"}
 varImpPlot(forest_model, col = "#377EB8", 
            main = "Variable Importance in Random Forest Model")
 ```
