--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -457,6 +457,14 @@ Take the `cut` variable in the *diamonds* dataset, which reflects increasing qua
 -   "Premium" $\mapsto$ 4;
 -   "Ideal" $\mapsto$ 5.
 
+We can convert this variable to numeric scores in R as follows:
+
+```{r}
+# Convert an ordinal variable to numeric scores
+diamonds$cut_level <- factor(diamonds$cut, 
+                      levels = c("Fair", "Good", "Very Good", "Premium", "Ideal"), 
+                      labels = c(1, 2, 3, 4, 5))
+```
 This numeric representation preserves the ordinal structure and can enhance the performance of models that recognize order, such as linear regression or decision trees.
 
 However, ordinal encoding should only be used when the order of categories is *truly meaningful*. Applying this method to *nominal* variables, like "red", "green", and "blue", can be misleading. Encoding those as 1, 2, and 3 suggests a false hierarchy and may bias the model.
