--- a/7-Classification-kNN.qmd
+++ b/7-Classification-kNN.qmd
@@ -96,7 +96,7 @@ To further illustrate how kNN operates in practice, consider a simplified classi
 
 @fig-ch7-ex-drug-1 visualizes the distribution of patient records. Each point represents a patient, with different shapes and colors used to indicate drug type. [Red circles]{style="color: red;"} correspond to Drug A, [green triangles]{style="color: green;"} to Drug B, and [blue squares]{style="color: blue;"} to Drug C.
 
-```{r fig-ch7-ex-drug-1, echo = FALSE, out.width = "95%", fig.cap = "Scatter plot of Age vs. Sodium/Potassium Ratio for 200 patients, with drug type indicated by color and shape."}
+```{r fig-ch7-ex-drug-1, echo = FALSE, out.width = "90%", fig.cap = "Scatter plot of Age vs. Sodium/Potassium Ratio for 200 patients, with drug type indicated by color and shape."}
 # Simulated data for illustration
 
 data(drug)
@@ -119,7 +119,7 @@ Suppose three new patients arrive at the clinic, and we need to determine which 
 
 These patients are represented by large orange circles with cross markers in @fig-ch7-ex-drug-2. The following analysis explores how kNN assigns drug classifications to these individuals based on proximity to labeled cases in the training data.
 
-```{r fig-ch7-ex-drug-2, echo = FALSE, out.width = "95%", fig.cap = "Scatter plot of age versus sodium/potassium ratio for 200 patients, with drug type shown by color and shape. The three new patients are highlighted with large orange circles."}
+```{r fig-ch7-ex-drug-2, echo = FALSE, out.width = "90%", fig.cap = "Scatter plot of age versus sodium/potassium ratio for 200 patients, with drug type shown by color and shape. The three new patients are highlighted with large orange circles."}
 
 size = if(knitr::is_latex_output()) 13.5 else 14.5
 
@@ -211,7 +211,7 @@ $$
 
 ```{r}
 #| label: fig-ch7-euclidean-distance
-#| out.width: "70%"
+#| out.width: "65%"
 #| fig-cap: "Visual representation of Euclidean distance between two patients in 2D space."
 #| echo: false
 
@@ -298,7 +298,9 @@ For instance, consider the `education` variable in the *bank* dataset, which has
 
 ```{r}
 # Convert an ordinal variable to numeric scores
-bank$education_level <- factor(bank$education, levels = c("primary", "secondary", "tertiary"), labels = c(1, 2, 3))
+bank$education_level <- factor(bank$education, 
+                               levels = c("primary", "secondary", "tertiary"), 
+                               labels = c(1, 2, 3))
 ```
 
 This numeric encoding preserves the order of education levels and allows the kNN model to treat higher education levels as more distant from lower ones, reflecting real-world meaning.
