--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -53,14 +53,14 @@ The theorem is mathematically expressed as:
 ```{=tex}
 \begin{equation} 
 \label{eq-bayes-theorem}
-P(A|B) = \frac{P(A \cap B)}{P(B)} 
+P(A|B) = \frac{P(A \cap B)}{P(B)}, 
 \end{equation}
 ```
-Where:
+where:
 
--   $P(A|B)$ is the posterior probability, the probability of event $A$ (the hypothesis) given that event $B$ (the evidence) has occurred.
+-   $P(A|B)$ is the posterior probability, the probability of event $A$ (the hypothesis) given that event $B$ (the evidence) has occurred;
 
--   $P(A \cap B)$ is the joint probability that both events $A$ and $B$ occur.
+-   $P(A \cap B)$ is the joint probability that both events $A$ and $B$ occur;
 
 -   $P(B)$ is the marginal probability or evidence, quantifying the total probability of observing event $B$ across all possible outcomes.
 
@@ -75,7 +75,7 @@ The expression for Bayes’ Theorem can also be derived by applying the definiti
 ```{=tex}
 \begin{equation} 
 \label{eq-bayes-theorem-2}
-P(A|B) = \frac{P(A \cap B)}{P(B)} = P(A) \times \frac{P(B|A)}{P(B)} 
+P(A|B) = \frac{P(A \cap B)}{P(B)} = P(A) \times \frac{P(B|A)}{P(B)}.
 \end{equation}
 ```
 These equivalent expressions result from two ways of expressing the joint probability $P(A \cap B)$. This formulation highlights how a prior belief $P(A)$ is updated using the likelihood $P(B|A)$ and normalized by the marginal probability $P(B)$.
@@ -164,7 +164,7 @@ str(risk)
 This dataset includes financial indicators such as age, income, marital status, mortgage, and number of loans. Naive Bayes assumes that, given a person’s risk classification, these features do not influence one another. Mathematically, the probability of a customer being in the `good risk` category given their attributes is expressed as:
 
 $$
-P(Y = y_1 | X_1, X_2, \dots, X_5) = \frac{P(Y = y_1) \times P(X_1, X_2, \dots, X_5 | Y = y_1)}{P(X_1, X_2, \dots, X_5)}
+P(Y = y_1 | X_1, X_2, \dots, X_5) = \frac{P(Y = y_1) \times P(X_1, X_2, \dots, X_5 | Y = y_1)}{P(X_1, X_2, \dots, X_5)}.
 $$
 
 Mathematically, computing the full joint likelihood of all features given a class label is challenging. Directly computing $P(X_1, X_2, \dots, X_5 | Y = y_1)$ is computationally expensive, especially as the number of features grows. In datasets with hundreds or thousands of features, storing and calculating joint probabilities for all possible feature combinations becomes impractical.
@@ -172,7 +172,7 @@ Mathematically, computing the full joint likelihood of all features given a clas
 The naive assumption of conditional independence simplifies this problem by expressing the joint probability as the product of individual probabilities:
 
 $$
-P(X_1, X_2, \dots, X_5 | Y = y_1) = P(X_1 | Y = y_1) \times P(X_2 | Y = y_1) \times P(X_5 | Y = y_1)
+P(X_1, X_2, \dots, X_5 | Y = y_1) = P(X_1 | Y = y_1) \times P(X_2 | Y = y_1) \times P(X_5 | Y = y_1).
 $$
 
 This transformation eliminates the need to compute complex joint probabilities, making the algorithm scalable even for high-dimensional data. Instead of handling an exponential number of feature combinations, Naive Bayes only requires computing simple conditional probabilities for each feature given the class label.
@@ -200,7 +200,7 @@ xtabs(~ marital + risk, data = risk2[c(1:10,100:190),])
 Without smoothing, the conditional probability becomes:
 
 $$
-P(\text{bad risk} | \text{married}) = \frac{\text{count}(\text{bad risk} \cap \text{married})}{\text{count}(\text{married})} = \frac{0}{\text{count}(\text{married})} = 0
+P(\text{bad risk} | \text{married}) = \frac{\text{count}(\text{bad risk} \cap \text{married})}{\text{count}(\text{married})} = \frac{0}{\text{count}(\text{married})} = 0.
 $$
 
 This would cause every married borrower to be classified as `good risk`, regardless of other features.
@@ -208,7 +208,7 @@ This would cause every married borrower to be classified as `good risk`, regardl
 Laplace smoothing resolves this by adjusting the count of each category. A small constant $k$ (typically $k = 1$) is added to each count, yielding:
 
 $$
-P(\text{bad risk} | \text{married}) = \frac{\text{count}(\text{bad risk} \cap \text{married}) + k}{\text{count}(\text{married}) + k \times \text{number of marital categories}}
+P(\text{bad risk} | \text{married}) = \frac{\text{count}(\text{bad risk} \cap \text{married}) + k}{\text{count}(\text{married}) + k \times \text{number of marital categories}}.
 $$
 
 This adjustment ensures that every possible feature-category pair has a non-zero probability, even if unobserved in the training set.
